--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>QR-CODE GENERATOR</title>
+  <script src ="main.js"></script>
 </head>
 <body>
  <form action="/users/new" method="POST">
