--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="left-container">
 
           <input type="text" id="data" placeholder="your qr text here" name="dataName">
-          <button type="submit" id="generate_code">Generate Qr Code</button>
+          <button type="submit" id="generate_code">Generate Qr</button>
       </div>
       <br>
       <br>
